--- a/content0.html
+++ b/content0.html
@@ -1,3 +1,65 @@
+<a id="zermatt"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Zermatt</h3>
+  </li>
+  <li class="date">
+    January 2015
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/zermatt/IMG_2256.jpg"
+      title=""
+      onclick="return hs.expand(this, config_zermatt)">
+      <img width="160" height="120" src="thumbs/zermatt/IMG_2256.jpg" alt="IMG_2256.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/zermatt/IMG_2261.jpg"
+      title=""
+      onclick="return hs.expand(this, config_zermatt)">
+      <img width="160" height="120" src="thumbs/zermatt/IMG_2261.jpg" alt="IMG_2261.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/zermatt/IMG_2267.jpg"
+      title=""
+      onclick="return hs.expand(this, config_zermatt)">
+      <img width="160" height="120" src="thumbs/zermatt/IMG_2267.jpg" alt="IMG_2267.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/zermatt/IMG_2271.jpg"
+      title=""
+      onclick="return hs.expand(this, config_zermatt)">
+      <img width="160" height="120" src="thumbs/zermatt/IMG_2271.jpg" alt="IMG_2271.jpg" />
+    </a>
+  </div>
+
+<div class="photo rot2">
+    <a class="vid_cursor" href="videos/zermatt.mp4" onclick="return hs.htmlExpand(this, { contentId: 'zermatt-video', preserveContent: false} )">
+      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_zermatt.jpg" alt="" />
+      <noscript>
+        <img width="160" height="120" src="videos/thumb_zermatt.jpg" alt="" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
+
+<div class="highslide-html-content" id="zermatt-video"
+    style="width: 641px">
+    <div class="highslide-body">
+      <video class="video" width="640" height="360" controls="controls" preload="none" poster="videos/zermatt.jpg">
+        <source src="videos/zermatt.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video> 
+    </div>
+</div>
 <a id="laclusaz"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -15,35 +77,50 @@
     <a class="highslide" href="hq/laclusaz/IMG_2224.jpg"
       title=""
       onclick="return hs.expand(this, config_laclusaz)">
-      <img width="160" height="120" src="thumbs/laclusaz/IMG_2224.jpg" alt="IMG_2224.jpg" />
+      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2224.jpg" alt="IMG_2224.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/laclusaz/IMG_2224.jpg" alt="IMG_2224.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/laclusaz/IMG_2228.jpg"
       title=""
       onclick="return hs.expand(this, config_laclusaz)">
-      <img width="160" height="120" src="thumbs/laclusaz/IMG_2228.jpg" alt="IMG_2228.jpg" />
+      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2228.jpg" alt="IMG_2228.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/laclusaz/IMG_2228.jpg" alt="IMG_2228.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/laclusaz/IMG_2232.jpg"
       title=""
       onclick="return hs.expand(this, config_laclusaz)">
-      <img width="160" height="120" src="thumbs/laclusaz/IMG_2232.jpg" alt="IMG_2232.jpg" />
+      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2232.jpg" alt="IMG_2232.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/laclusaz/IMG_2232.jpg" alt="IMG_2232.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/laclusaz/IMG_2242.jpg"
       title=""
       onclick="return hs.expand(this, config_laclusaz)">
-      <img width="160" height="120" src="thumbs/laclusaz/IMG_2242.jpg" alt="IMG_2242.jpg" />
+      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2242.jpg" alt="IMG_2242.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/laclusaz/IMG_2242.jpg" alt="IMG_2242.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot5">
     <a class="highslide" href="hq/laclusaz/IMG_2246.jpg"
       title=""
       onclick="return hs.expand(this, config_laclusaz)">
-      <img width="160" height="120" src="thumbs/laclusaz/IMG_2246.jpg" alt="IMG_2246.jpg" />
+      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2246.jpg" alt="IMG_2246.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/laclusaz/IMG_2246.jpg" alt="IMG_2246.jpg" />
+      </noscript>
     </a>
   </div>
   <div style="clear:both"></div>
@@ -573,101 +650,6 @@
       <img class="lazy galleries/ggsemi" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/IMG_1984.jpg" alt="IMG_1984.jpg" />
       <noscript>
         <img width="90" height="120" src="thumbs/ggsemi/IMG_1984.jpg" alt="IMG_1984.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="emeraldsdonner"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Emeralds & Donner</h3>
-  </li>
-  <li class="date">
-    June 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/emeraldsdonner/10.jpg"
-      title="Benji contemplating a dyno on an great 6b+. On that day, I sent my first 7b/+ which follows the arete."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/10.jpg" alt="10.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/10.jpg" alt="10.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/emeraldsdonner/20.jpg"
-      title="Working an old school 7b. So hard, so thin, impossible!"
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/20.jpg" alt="20.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/20.jpg" alt="20.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/emeraldsdonner/25.jpg"
-      title="Davide on Step into the Light, the best line on the wall."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/25.jpg" alt="25.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/25.jpg" alt="25.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/emeraldsdonner/30.jpg"
-      title="Camping at D.L. Bliss never gets old. The water was 13C, much colder than last year."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/30.jpg" alt="30.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/emeraldsdonner/30.jpg" alt="30.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/emeraldsdonner/40.jpg"
-      title="Potato juggling while our gigantic steaks are cooking."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="112" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/40.jpg" alt="40.jpg" />
-      <noscript>
-        <img width="112" height="120" src="thumbs/emeraldsdonner/40.jpg" alt="40.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/emeraldsdonner/50.jpg"
-      title="A short but super technical 6c at Donner. Sequency and balancy until the very end. "
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/50.jpg" alt="50.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/emeraldsdonner/50.jpg" alt="50.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/emeraldsdonner/60.jpg"
-      title="A 5.8 'offwidth' that turned out to be very easy with lots of holds for hands and feet. Here, I am locking myself by inflating my chest!"
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/60.jpg" alt="60.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/60.jpg" alt="60.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/emeraldsdonner/70.jpg"
-      title="The offwidth crack with a spicy 5c+ slab to the right."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/70.jpg" alt="70.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/70.jpg" alt="70.jpg" />
       </noscript>
     </a>
   </div>
