--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,168 @@
+<a id="Shuteye"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Shuteye Ridge</h3>
+  </li>
+  <li class="date">
+    October 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/shuteye/IMG_0855.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0855.jpg" alt="IMG_0855.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye/IMG_0855.jpg" alt="IMG_0855.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/shuteye/IMG_0863.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0863.jpg" alt="IMG_0863.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye/IMG_0863.jpg" alt="IMG_0863.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/shuteye/IMG_0863n.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0863n.jpg" alt="IMG_0863n.jpg" />
+      <noscript>
+        <img width="80" height="120" src="thumbs/shuteye/IMG_0863n.jpg" alt="IMG_0863n.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/shuteye/IMG_0873.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0873.jpg" alt="IMG_0873.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye/IMG_0873.jpg" alt="IMG_0873.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/shuteye/IMG_0878.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0878.jpg" alt="IMG_0878.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye/IMG_0878.jpg" alt="IMG_0878.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/shuteye/IMG_0914.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0914.jpg" alt="IMG_0914.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye/IMG_0914.jpg" alt="IMG_0914.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/shuteye/IMG_0923.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0923.jpg" alt="IMG_0923.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye/IMG_0923.jpg" alt="IMG_0923.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/shuteye/IMG_0923n.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="142" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0923n.jpg" alt="IMG_0923n.jpg" />
+      <noscript>
+        <img width="142" height="120" src="thumbs/shuteye/IMG_0923n.jpg" alt="IMG_0923n.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/shuteye/IMG_0938.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0938.jpg" alt="IMG_0938.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye/IMG_0938.jpg" alt="IMG_0938.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/shuteye/IMG_0945.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0945.jpg" alt="IMG_0945.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye/IMG_0945.jpg" alt="IMG_0945.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/shuteye/IMG_0951.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shuteye)">
+      <img class="lazy galleries/shuteye" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye/IMG_0951.jpg" alt="IMG_0951.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye/IMG_0951.jpg" alt="IMG_0951.jpg" />
+      </noscript>
+    </a>
+  </div>
+
+  <div class="photo rot1">
+    <a class="vid_cursor" href="videos/shuteye1nr.mp4" onclick="return hs.htmlExpand(this, { contentId: 'shuteye1-video', preserveContent: false} )">
+      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_shuteye1nr.jpg" alt="" />
+      <noscript>
+        <img width="160" height="120" src="videos/thumb_shuteye1nr.jpg" alt="" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="vid_cursor" href="videos/shuteye2nr.mp4" onclick="return hs.htmlExpand(this, { contentId: 'shuteye2-video', preserveContent: false} )">
+      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_shuteye2nr.jpg" alt="" />
+      <noscript>
+        <img width="160" height="120" src="videos/thumb_shuteye2nr.jpg" alt="" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
+
+<div class="highslide-html-content" id="shuteye1-video"
+    style="width: 641px">
+    <div class="highslide-body">
+      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/shuteye1nr.jpg">
+        <source src="videos/shuteye1nr.mp4" type="video/mp4" />
+        <source src="videos/shuteye1nr.webm" type="video/webm" />
+        Your browser does not support the video tag.
+      </video> 
+    </div>
+</div>
+
+<div class="highslide-html-content" id="shuteye2-video"
+    style="width: 641px">
+    <div class="highslide-body">
+      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/shuteye2nr.jpg">
+        <source src="videos/shuteye2nr.mp4" type="video/mp4" />
+        <source src="videos/shuteye2nr.webm" type="video/webm" />
+        Your browser does not support the video tag.
+      </video> 
+    </div>
+</div>
+
 <a id="Marion"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -779,161 +944,6 @@
       <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Yosemite"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Yosemite</h3>
-  </li>
-  <li class="date">
-    March 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yosemite/01.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/01.jpg" alt="01.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yosemite/01.jpg" alt="01.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yosemite/03.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/03.jpg" alt="03.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yosemite/03.jpg" alt="03.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/yosemite/04.panorama.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="382" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/04.panorama.jpg" alt="04.panorama.jpg" />
-      <noscript>
-        <img width="382" height="120" src="thumbs/yosemite/04.panorama.jpg" alt="04.panorama.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/yosemite/05.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/05.jpg" alt="05.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/05.jpg" alt="05.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/yosemite/06.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/06.jpg" alt="06.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/06.jpg" alt="06.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/yosemite/07.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/07.jpg" alt="07.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/07.jpg" alt="07.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yosemite/08.5.panorama.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="382" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/08.5.panorama.jpg" alt="08.5.panorama.jpg" />
-      <noscript>
-        <img width="382" height="120" src="thumbs/yosemite/08.5.panorama.jpg" alt="08.5.panorama.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yosemite/09.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/09.jpg" alt="09.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yosemite/09.jpg" alt="09.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/yosemite/10.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/10.jpg" alt="10.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/10.jpg" alt="10.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/yosemite/11.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/11.jpg" alt="11.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yosemite/11.jpg" alt="11.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/yosemite/13.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/13.jpg" alt="13.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/13.jpg" alt="13.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/yosemite/14.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/14.jpg" alt="14.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/14.jpg" alt="14.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yosemite/15.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/15.jpg" alt="15.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/15.jpg" alt="15.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yosemite/16.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/16.jpg" alt="16.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/16.jpg" alt="16.jpg" />
       </noscript>
     </a>
   </div>
