--- a/content3.html
+++ b/content3.html
@@ -1,3 +1,158 @@
+<a id="Yosemite"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Yosemite</h3>
+  </li>
+  <li class="date">
+    March 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/yosemite/01.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/01.jpg" alt="01.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/yosemite/01.jpg" alt="01.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/yosemite/03.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/03.jpg" alt="03.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/yosemite/03.jpg" alt="03.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/yosemite/04.panorama.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="382" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/04.panorama.jpg" alt="04.panorama.jpg" />
+      <noscript>
+        <img width="382" height="120" src="thumbs/yosemite/04.panorama.jpg" alt="04.panorama.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/yosemite/05.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/05.jpg" alt="05.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yosemite/05.jpg" alt="05.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/yosemite/06.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/06.jpg" alt="06.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yosemite/06.jpg" alt="06.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/yosemite/07.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/07.jpg" alt="07.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yosemite/07.jpg" alt="07.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/yosemite/08.5.panorama.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="382" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/08.5.panorama.jpg" alt="08.5.panorama.jpg" />
+      <noscript>
+        <img width="382" height="120" src="thumbs/yosemite/08.5.panorama.jpg" alt="08.5.panorama.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/yosemite/09.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/09.jpg" alt="09.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/yosemite/09.jpg" alt="09.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/yosemite/10.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/10.jpg" alt="10.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yosemite/10.jpg" alt="10.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/yosemite/11.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/11.jpg" alt="11.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/yosemite/11.jpg" alt="11.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/yosemite/13.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/13.jpg" alt="13.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yosemite/13.jpg" alt="13.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/yosemite/14.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/14.jpg" alt="14.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yosemite/14.jpg" alt="14.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/yosemite/15.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/15.jpg" alt="15.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yosemite/15.jpg" alt="15.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/yosemite/16.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yosemite)">
+      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/16.jpg" alt="16.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yosemite/16.jpg" alt="16.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Grotto"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -771,71 +926,6 @@
       <img class="lazy galleries/royal_arches" width="169" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/z99.jpg" alt="z99.jpg" />
       <noscript>
         <img width="169" height="120" src="thumbs/royal_arches/z99.jpg" alt="z99.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Tallac"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Tallac</h3>
-  </li>
-  <li class="date">
-    August 2012
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/tallac/1.jpg"
-      title="Fallen Leaf Lake, a small lake south west of Lake Tahoe."
-      onclick="return hs.expand(this, config_tallac)">
-      <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/1.jpg" alt="1.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tallac/1.jpg" alt="1.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/tallac/2.jpg"
-      title="The trail quickly leaves the forest. It must be really hot on sunny days."
-      onclick="return hs.expand(this, config_tallac)">
-      <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/2.jpg" alt="2.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tallac/2.jpg" alt="2.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/tallac/3.jpg"
-      title="Looking up north toward the entrance of Emerald Bay."
-      onclick="return hs.expand(this, config_tallac)">
-      <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/3.jpg" alt="3.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tallac/3.jpg" alt="3.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/tallac/4.jpg"
-      title="Sam and I on the summit of Mt Tallac. 1h55 to get up, 2h05 to get down."
-      onclick="return hs.expand(this, config_tallac)">
-      <img class="lazy galleries/tallac" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/4.jpg" alt="4.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tallac/4.jpg" alt="4.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/tallac/5.jpg"
-      title="Could not catch this tasty pheasant for dinner :)"
-      onclick="return hs.expand(this, config_tallac)">
-      <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/5.jpg" alt="5.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tallac/5.jpg" alt="5.jpg" />
       </noscript>
     </a>
   </div>
